--- a/cupcake_site/templates/home.html
+++ b/cupcake_site/templates/home.html
@@ -6,7 +6,6 @@
 {% block content %}
 
 
-
 <!-- ================= SLIDER ================= -->
 <section class="slider">
     <div id="cupcakeCarousel"
@@ -61,11 +60,11 @@
 
 <!-- ================= FEATURES ================= -->
 <section class="container my-5">
-    <div class="row text-center">
+    <div class="row text-center gy-4">
 
         <div class="col-md-4">
             <div class="feature-card">
-                🚴
+                <img src="{% static 'img/images.png' %}" alt="Package">
                 <h3>Delivery</h3>
                 <p>Only 30 minutes</p>
             </div>
@@ -73,7 +72,7 @@
 
         <div class="col-md-4">
             <div class="feature-card">
-                🎁
+                <img src="{% static 'img/gift.png' %}" alt="Package">
                 <h3>Package</h3>
                 <p>Free</p>
             </div>
@@ -81,7 +80,7 @@
 
         <div class="col-md-4">
             <div class="feature-card">
-                🧁
+                <img src="{% static 'img/discount.jpg' %}" alt="Discount">
                 <h3>Discount 15%</h3>
                 <p>Opening Offer</p>
             </div>
@@ -108,11 +107,27 @@
         </div>
 
         <div class="member">
+            <img src="{% static 'img/team3.jpeg' %}">
+            <h4>Nandini Sonkar</h4>
+            <p>Designer</p>
+        </div>
+
+        <div class="member">
+            <img src="{% static 'img/team4.jpeg' %}">
+            <h4>Sanjana </h4>
+            <p>Designer</p>
+        </div>
+
+        <div class="member">
             <img src="{% static 'img/team3.jpg' %}">
             <h4>Vaishnavi</h4>
             <p>Designer</p>
         </div>
     </div>
 </section>
+
+{% block scripts %}
+<script src="{% static 'js/location.js' %}"></script>
+{% endblock %}
 
 {% endblock %}
